styles.css
body {
    text-align: center;
    background-color: #011F3F;
  }

#level-title {
    font-family: 'Press Start 2P', cursive;
    font-size: 3rem;
    margin:  5%;
    color: #FEF2BF;
}

.clock {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -30%);
    width: 360px;
    height: 360px;
    border-radius: 50%;
    margin-bottom: 50px;
    overflow: auto;
    float:left;
    margin: 10px;
  }
  
.circle{
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border: 0.1rem solid #181818;
}

.container {
    box-sizing: border-box;
    font-size: 100%;
    line-height: 1.5rem;
    font-family:Roboto;
    height: 100%;
    width: 100%;
    display:table;
}

.verticalmiddle {
    display: table-cell;
    vertical-align: middle;
    text-align:center;
}

.simon {
    background: none; 
    position: relative;
    width: 360px;
    height: 360px;
    margin: auto;
    overflow: hidden;
}

#center {
    position: relative;
    left: 35%;
    top: 35%;
    width: 30%;
    height: 30%;
    z-index: 10;
    background-color:#383838;
    border: 0.5px solid grey;
}

#center a {
    display: block;
    width: 100%;
    height: 80%;
    padding: 0.2rem 0;
    font-family: 'Press Start 2P', cursive;
    color: white;
    font-size:200%;  
}

#center label{
    display: block;
    width: 100%;
    height: 20%;
    padding: 0.8rem 0;
    color: #dbdbdb;
    font-family: 'Press Start 2P', cursive;  
}

.item {
    overflow: hidden;
    position: absolute;
    width: 50%;
    height: 50%;
    transform-origin: 100% 100%;
    -moz-transform-origin: 100% 100%;
    -webkit-transform-origin: 100% 100%;
}

.item:hover {
    opacity: 0.6;
    background-color: white;
}

.game-over {
    background-color: red;
    opacity: 0.8;
}

.pressed, .pressed:hover {
    box-shadow: 0 0 40px white;
    background-color: #aaa;
}  

.green{
    background-color: green;
}

.red{
    background-color: red;
}

.yellow{
    background-color: yellow;
}

.blue{
    background-color: blue;
}  

/* 4 sectores */
.item1_4 {
    z-index: 1;
    transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -webkit-transform: rotate(90deg);
}
.item2_4 {
    z-index: 2;
    transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
}
.item3_4 {
    z-index: 3;
    transform: rotate(270deg);
    -moz-transform: rotate(270deg);
    -webkit-transform: rotate(270deg);
}

